pkl-core/src/test/files/LanguageSnippetTests/input/errors/invalidFileUri2.pkl
res = read*("file:path/to/foo.txt")
